--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  text-align: center;
+  color:white;
+}
 
 .App-header {
   background-color: #282c34;
